package org.taranix.cafe.desktop.components.application;

import org.eclipse.swt.widgets.Shell;

public interface ApplicationShellConfiguration {
    void configure(Shell shell);
}
