package org.taranix.cafe.graphics.components.containers;

import org.taranix.cafe.graphics.components.Component;

public interface Container extends Component {


}
